# c-ares-resolver

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  appveyor.yml  build.rs  install-rust.ps1  publish-docs.sh  publish-key.enc
.github/: dependabot.yml
.github/workflows/: build.yml
examples/: blocking.rs  callback.rs  dns_parser.rs  dnsrec.rs  futures.rs  mx_query.rs  txt_query.rs
src/: blockingresolver.rs  dns_opt.rs  error.rs  eventloop.rs  futureresolver.rs  host.rs  lib.rs  nameinfo.rs  resolver.rs  tests.rs
src/unix/: eventloop.rs
src/windows/: eventloop.rs
tests/: blocking_resolver.rs  callback_resolver.rs  future_resolver.rs  integration.rs
tests/common/: mod.rs
