[package]
name = "c-ares-resolver"
license = "MIT"
version = "7.4.1"
authors = ["David Hotham"]
description = """
An asynchronous DNS resolver, backed by c-ares.
"""
repository = "https://github.com/dimbleby/c-ares-resolver"
documentation = "https://docs.rs/c-ares-resolver"
readme = "README.md"
keywords = ["DNS", "c-ares", "futures"]
categories = ["asynchronous", "network-programming"]
edition = "2021"
include = ["src/**/*", "LICENSE.txt", "README.md", "CHANGELOG.md"]

[dependencies]
c-ares = "7.5.1"
crossbeam-channel = "0.5.0"
futures-channel = "0.3.9"
polling = "2.0.1"

[dev-dependencies]
futures-executor = "0.3.9"

[features]
default = []
build-cmake = ["c-ares/build-cmake"]
