[package]
name = "c-ares-resolver"
license = "MIT"
version = "7.6.0"
authors = ["David Hotham"]
description = """
An asynchronous DNS resolver, backed by c-ares.
"""
repository = "https://github.com/dimbleby/c-ares-resolver"
documentation = "https://docs.rs/c-ares-resolver"
readme = "README.md"
keywords = ["DNS", "c-ares", "futures"]
categories = ["asynchronous", "network-programming"]
edition = "2021"
include = ["src/**/*", "LICENSE.txt", "README.md", "CHANGELOG.md"]

[dependencies]
c-ares = { version = "7.8.0", default-features = false }
futures-channel = "0.3.9"
polling = "3.1.0"

[dev-dependencies]
futures-executor = "0.3.9"

[features]
default = ["maybe-vendored"]
vendored = ["c-ares/vendored"]
maybe-vendored = ["c-ares/maybe-vendored"]
build-cmake = ["c-ares/build-cmake"]

[patch.crates-io]
c-ares = { version = "7.8.0", git = "https://github.com/zh-jq/rust-c-ares.git", branch = "compat" }

